--- a/index.html
+++ b/index.html
@@ -912,9 +912,12 @@
                                                         <div class="works-img-all works-item-bg"></div><!-- post item bg end -->
                                                         <!-- post item description start -->
                                                         <div class="works-description popup-photo-gallery">
+                                                            <!-- post item link start -->
+                                                            <a href="https://www.dz49.com" title="Gallery 1 / Image description 1"><!-- post item start -->
+                                                            <div class="works-item-size-FIX">
                                                                 <!-- section title start -->
                                                                 <h3>
-                                                                    <a href="https://www.jagsdetail.com">View</a>
+                                                                    View
                                                                 </h3><!-- section title end -->
                                                                 <!-- divider start -->
                                                                 <div class="inner-divider-ultra-half"></div><!-- divider end -->
@@ -964,8 +967,7 @@
                                                         <!-- post item description start -->
                                                         <div class="works-description">
                                                             <!-- post item link start -->
-                                                            <a href="https://www.dz49.com" title="Gallery 1 / Image description 1"><!-- post item start -->
-                                                            <div class="works-item-size-FIX">
+                                                            <a href="https://www.jagsdetail.com">View</a>
                                                                 <!-- section title start -->
                                                                 <h3>
                                                                     View
