--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
                             <li>
                                 <a class="link-underline-menu" href="#works">Live Sites</a>
                             </li>
+                            <a class="link-underline-menu" href="#news">News</a>
+                            </li>
                             <li>
                                 <a class="link-underline-menu" href="#contact">Contact</a>
                             </li>
