--- a/index.html
+++ b/index.html
@@ -115,9 +115,10 @@
                                 <a class="link-underline-menu" href="#about">About</a>
                             </li>
                             <li>
-                                <a class="link-underline-menu" href="#works">Live Sites</a>
+                                <a class="link-underline-menu" href="#news">Pricing</a>
                             </li>
-                                <a class="link-underline-menu" href="#news">News</a>
+                            <li>
+                                <a class="link-underline-menu" href="#works">Live Sites</a>
                             </li>
                             <li>
                                 <a class="link-underline-menu" href="#contact">Contact</a>
