--- a/index.html
+++ b/index.html
@@ -1283,7 +1283,7 @@
                                                         </h4><!-- page subtitle end -->
                                                         <!-- divider start -->
                                                         <div class="inner-divider-large"></div><!-- divider end -->
-							    <img src="https://i.ibb.co/9T6CZT1/news-1.jpg" alt="news-1" border="0">
+							    <img src="https://i.ibb.co/qxz4rMn/news-1.jpg" alt="news-1" border="0">
                                                         <!-- page TXT start -->
                                                         <p>
 							    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever
@@ -1364,6 +1364,7 @@
                                                             October 2, 2020
                                                         </h4><!-- page subtitle end -->
                                                         <!-- divider start -->
+							    <img src="https://i.ibb.co/BftxZ3b/news-2.jpg" alt="news-2" border="0">
                                                         <div class="inner-divider-large"></div><!-- divider end -->
                                                         <!-- page TXT start -->
                                                         <p>
