--- a/index.html
+++ b/index.html
@@ -1280,8 +1280,8 @@
                                                         <!-- page subtitle start -->
                                                         <h4 class="post-heading post-heading-all post-heading-all-date">
                                                             October 1, 2020
-								<img src="https://i.ibb.co/qxz4rMn/news-1.jpg" alt="news-1" border="0">
                                                         </h4><!-- page subtitle end -->
+							    <a href="<img src="https://i.ibb.co/qxz4rMn/news-1.jpg"" alt="news-1" border="0">
                                                         <!-- divider start -->
                                                         <div class="inner-divider-large"></div><!-- divider end -->
                                                         <!-- page TXT start -->
