--- a/index.html
+++ b/index.html
@@ -1281,7 +1281,7 @@
                                                         <h4 class="post-heading post-heading-all post-heading-all-date">
                                                             October 1, 2020
                                                         </h4><!-- page subtitle end -->
-							    <a href="<img src="https://i.ibb.co/qxz4rMn/news-1.jpg"" alt="news-1" border="0">
+							    <a href="https://dz49.co/4-informational"><img src="https://i.ibb.co/BftxZ3b/news-2.jpg" alt="news-2" border="0"</a>
                                                         <!-- divider start -->
                                                         <div class="inner-divider-large"></div><!-- divider end -->
                                                         <!-- page TXT start -->
