--- a/index.html
+++ b/index.html
@@ -1273,13 +1273,13 @@
                                                         <div class="inner-divider-half"></div><!-- divider end -->
                                                         <!-- page title start -->
                                                         <div class="post-title post-title-news">
-                                                            Simplicity is <span class="post-title-color">complex</span>
+                                                            Plan<span class="post-title-color">#1</span>
                                                         </div><!-- page title end -->
                                                         <!-- divider start -->
                                                         <div class="inner-divider-half"></div><!-- divider end -->
                                                         <!-- page subtitle start -->
                                                         <h4 class="post-heading post-heading-all post-heading-all-date">
-                                                            October 1, 2020
+                                                            INFORMATIONAL WEB DESIGN PLAN
                                                         </h4><!-- page subtitle end -->
 							    <a href="https://dz49.co/4-informational"><img src="https://i.ibb.co/BftxZ3b/news-2.jpg" alt="news-2" border="0"</a>
                                                         <!-- divider start -->
@@ -1355,16 +1355,16 @@
                                                         <div class="inner-divider-half"></div><!-- divider end -->
                                                         <!-- page title start -->
                                                         <div class="post-title post-title-news">
-                                                            Design is a <span class="post-title-color">process</span>
+                                                            Plan <span class="post-title-color">#2</span>
                                                         </div><!-- page title end -->
                                                         <!-- divider start -->
                                                         <div class="inner-divider-half"></div><!-- divider end -->
                                                         <!-- page subtitle start -->
                                                         <h4 class="post-heading post-heading-all post-heading-all-date">
-                                                            October 2, 2020
+                                                            PUBLIC FIGURE WEB DESIGN
                                                         </h4><!-- page subtitle end -->
                                                         <!-- divider start -->
-							<img src="https://i.ibb.co/BftxZ3b/news-2.jpg" alt="news-2" border="0">
+							<a href="https://dz49.co/4-informational"><img src="https://i.ibb.co/qxz4rMn/news-1.jpg" alt="news-2" border="0"</a>
                                                         <div class="inner-divider-large"></div><!-- divider end -->
                                                         <!-- page TXT start -->
                                                         <p>
