--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
                                 <a class="link-underline-menu" href="#about">About</a>
                             </li>
                             <li>
-                                <a class="link-underline-menu" href="#works">Live Sites</a>
+                                <a class="link-underline-menu" href="#works"></a>
                             </li>
                             <li>
-                                <a class="link-underline-menu" href="#contact">Contact</a>
+                                <a class="link-underline-menu" href="https://dz49.co/contact-us">Contact</a>
                             </li>
                         </ul><!-- menu end -->
                     </div>
