--- a/index.html
+++ b/index.html
@@ -114,10 +114,8 @@
                             <li>
                                 <a class="link-underline-menu" href="#about">About</a>
                             </li>
-                            <li>
-                            </li>
-                            <li>
-                                <a class="link-underline-menu" href="https://dz49.co/contact-us">Contact</a>
+                            <lil>
+                                <a class="link-underline-menu" href="https://www.dz49.co/contact-us">Contact</a>
                             </li>
                         </ul><!-- menu end -->
                     </div>
