--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <!-- preloader start -->
-        <div class="preloader-bg"></div>
+ d       <div class="preloader-bg"></div>
         <div id="preloader">
             <div id="preloader-status">
                 <div class="preloader-position loader">
@@ -114,7 +114,7 @@
                             <li>
                                 <a class="link-underline-menu" href="#about">About</a>
                             </li>
-                            <lil>
+                            <li>
                                 <a class="link-underline-menu" href="https://www.dz49.co/contact-us">Contact</a>
                             </li>
                         </ul><!-- menu end -->
