--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                 <a class="link-underline-menu" href="#about">About</a>
                             </li>
                             <li>
-                                <a href="https://www.dz49.co/contact-us">Contact</a>
+                                <a href="https://dz49.co/contact-us" class="button-the button-the-submit" id="submit" target="_blank"><span>Submit</span></a>
                             </li>
                         </ul><!-- menu end -->
                     </div>
