--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
                             </li>
                             <li>
                                 <a class="link-underline-menu" href="#about">About</a>
-                            </li>
-                            <li>
+                            </div>
                                 <a href="#https://dz49.co/contact-us">CONTACT</a>
                         </ul><!-- menu end -->
                     </div>
