--- a/index.html
+++ b/index.html
@@ -113,8 +113,10 @@
                             </li>
                             <li>
                                 <a class="link-underline-menu" href="#about">About</a>
-                            </div>
-                                <a href="#https://dz49.co/contact-us">CONTACT</a>
+                            </li>
+                            <li>
+                                <a class="" href="#https://dz49.co/contact-us">CONTACT</a>
+                            <li>
                         </ul><!-- menu end -->
                     </div>
                 </div><!-- main navigation end -->
