--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <!-- preloader start -->
- d       <div class="preloader-bg"></div>
+        <div class="preloader-bg"></div>
         <div id="preloader">
             <div id="preloader-status">
                 <div class="preloader-position loader">
