--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                 <a class="link-underline-menu" href="#about">About</a>
                             </li>
                             <li>
-                                <a class="link-underline-menu" a href="#https://dz49.co/contact-us">CONTACT</a>
+                                <a class="link-underline-menu" href="#https://dz49.co/contact-us">CONTACT</a>
                                 <li>
                         </ul><!-- menu end -->
                     </div>
