--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                 <a class="link-underline-menu" href="#news">News</a>
                             </li>
                             <li>
-                                <a class="link-underline-menu" href="#contact">Contact</a>
+                                <a class="link-underline-menu" href="https://dz49.co/contact-us">Contact</a>
                             </li>
                         </ul><!-- menu end -->
                     </div>
