--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="bottom-credits">
                 <!-- page subtitle start -->
                 <h4 class="bottom-credits-lead bottom-credits-first">
-                    (+1) 234 56 789
+                    <a href="https://dz49.co/contact-us">contact me</a>
                 </h4><!-- page subtitle end -->
                 <!-- page subtitle start -->
                 <h4 class="bottom-credits-lead bottom-credits-lead-color">
