--- a/index.html
+++ b/index.html
@@ -55,13 +55,7 @@
                                 <a class="link-underline-menu" href="#about">About</a>
                             </li>
                             <li>
-                                <a class="link-underline-menu" href="#services">Services</a>
-                            </li>
-                            <li>
-                                <a class="link-underline-menu" href="#works">Works</a>
-                            </li>
-                            <li>
-                                <a class="link-underline-menu" href="#news">News</a>
+                                <a class="link-underline-menu" href="#services">My Websites</a>
                             </li>
                         </ul><!-- menu end -->
                     </div>
