--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </h4><!-- page subtitle end -->
                 <!-- page subtitle start -->
                 <h4 class="bottom-credits-lead bottom-credits-lead-color">
-                    <a href="mailto:ultimex@ultimex.com">ultimex@ultimex.com</a>
+                    <a href="mailto:ask@dz49.com">ask@dz49.com</a>
                 </h4><!-- page subtitle end -->
             </div><!-- bottom credits end -->
             <!-- vertical lines start -->
@@ -1589,7 +1589,7 @@
                                                              <!-- page subtitle start -->
                                                              <span class="bottom-credits-contact-lead bottom-credits-contact-first">(+1) 234 56 789</span> <!-- page subtitle end -->
                                                              <!-- page subtitle start -->
-                                                             <span class="bottom-credits-contact-lead bottom-credits-contact-first"><a href="mailto:ultimex@ultimex.com">ultimex@ultimex.com</a></span>
+                                                             <span class="bottom-credits-contact-lead bottom-credits-contact-first"><a href="mailto:ask@dz49.com">ask@dz49.com</a></span>
                                                             <!-- page subtitle end -->
                                                              <!-- social icons start -->
                                                              <span class="bottom-credits-contact-lead"><a class="ion-social-twitter ion-light" href="#"><span>Twitter</span></a> <a class=
