--- a/index.html
+++ b/index.html
@@ -1459,8 +1459,8 @@
                                                         <div class="inner-divider-large"></div><!-- divider end -->
                                                         <!-- page TXT start -->
                                                         <p>
-                                                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever
-                                                            <a class="link-underline" href="#">since the 1500s</a>.
+                                                            Specializing in crafting tailor-made e-commerce websites, perfectly customized to meet your unique
+                                                            <a class="link-underline" href="https://dz49.co/3-build-a-website">business needs.</a>.
                                                         </p><!-- page TXT end -->
                                                     </div><!-- post txt end -->
                                                     <!-- divider start -->
