--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                                                     <div class="inner-divider"></div><!-- divider end -->
                                                     <!-- page TXT start -->
                                                     <p>
-                                                        Specializing in crafting tailor-made e-commerce websites, perfectly customized to meet your unique business requirements. <a class="link-underline" href="https://dz49.co/3-build-a-website">START NOW</a>
+                                                        Specializing in crafting tailor-made e-commerce websites, perfectly customized to meet your unique business requirements. <a class="link-underline" href="https://dz49.co/3-build-a-website">CLICK HERE TO START NOW</a>
                                                     </p><!-- page TXT end -->
                                                 </div>
                                                 <div class="clearfix"></div>
