--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                                 <div class="swiper-slide-txt-inner">
                                                     <!-- page subtitle start -->
                                                     <h4 class="post-heading post-heading-all post-heading-slide">
-                                                        The Company
+                                                        Build a Website
                                                     </h4><!-- page subtitle end -->
                                                     <!-- divider start -->
                                                     <div class="inner-divider-half"></div><!-- divider end -->
@@ -122,7 +122,7 @@
                                                     <div class="inner-divider"></div><!-- divider end -->
                                                     <!-- page TXT start -->
                                                     <p>
-                                                        Lorem Ipsum has been the industry's standard dummy text ever <a class="link-underline" href="#">since the 1500s</a>.
+                                                        Unlock your online potential with a website that showcases your brand and drives results <a class="link-underline" href="https://dz49.co/3-build-a-website">CLICK HERE TO START NOW</a>
                                                     </p><!-- page TXT end -->
                                                 </div>
                                                 <div class="clearfix"></div>
