--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>
-            Ultimex - One Page Portfolio Template
+            DZ49.COM - Your web Guru
         </title>
         <meta content="" name="description">
         <meta content="" name="author">
