--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                                     <div class="inner-divider"></div><!-- divider end -->
                                                     <!-- page TXT start -->
                                                     <p>
-                                                        Unlock your online potential with a website that showcases your brand and drives results <a class="link-underline" href="https://dz49.co/3-build-a-website">CLICK HERE TO START NOW</a>
+                                                        Unlock your online potential with a website that showcases your brand and drives results <a class="link-underline" href="https://dz49.co/ecommerce-sites/18-e-commerce-website-hosted-by-dz49.html">CLICK HERE TO START NOW</a>
                                                     </p><!-- page TXT end -->
                                                 </div>
                                                 <div class="clearfix"></div>
@@ -147,7 +147,7 @@
                                                     <div class="inner-divider"></div><!-- divider end -->
                                                     <!-- page TXT start -->
                                                     <p>
-                                                        Boost your digital value as a public figure <a class="link-underline" href="https://dz49.co/5-public-figure-websites">CLICK HERE TO START NOW</a>
+                                                        Boost your digital value as a public figure <a class="link-underline" href="https://dz49.co/ecommerce-sites/18-e-commerce-website-hosted-by-dz49.html">CLICK HERE TO START NOW</a>
                                                     </p><!-- page TXT end -->
                                                 </div>
                                                 <div class="clearfix"></div>
@@ -172,7 +172,7 @@
                                                     <div class="inner-divider"></div><!-- divider end -->
                                                     <!-- page TXT start -->
                                                     <p>
-                                                        Designing and developing exceptional cuisine websites, elevating your online presence to delectable heights <a class="link-underline" href="https://dz49.co/3-build-a-website">CLICK HERE TO START NOW</a>
+                                                        Designing and developing exceptional cuisine websites, elevating your online presence to delectable heights <a class="link-underline" href="https://dz49.co/ecommerce-sites/18-e-commerce-website-hosted-by-dz49.html">CLICK HERE TO START NOW</a>
                                                     </p><!-- page TXT end -->
                                                 </div>
                                                 <div class="clearfix"></div>
@@ -197,7 +197,7 @@
                                                     <div class="inner-divider"></div><!-- divider end -->
                                                     <!-- page TXT start -->
                                                     <p>
-                                                        Specializing in crafting tailor-made e-commerce websites, perfectly customized to meet your unique business requirements. <a class="link-underline" href="https://dz49.co/3-build-a-website">CLICK HERE TO START NOW</a>
+                                                        Specializing in crafting tailor-made e-commerce websites, perfectly customized to meet your unique business requirements. <a class="link-underline" href="https://dz49.co/ecommerce-sites/18-e-commerce-website-hosted-by-dz49.html">CLICK HERE TO START NOW</a>
                                                     </p><!-- page TXT end -->
                                                 </div>
                                                 <div class="clearfix"></div>
@@ -1454,7 +1454,7 @@
                                                         <!-- page TXT start -->
                                                         <p>
                                                             Specializing in crafting tailor-made e-commerce websites, perfectly customized to meet your unique
-                                                            <a class="link-underline" href="https://dz49.co/3-build-a-website">business needs.</a>.
+                                                            <a class="link-underline" href="https://dz49.co/ecommerce-sites/18-e-commerce-website-hosted-by-dz49.html">business needs.</a>.
                                                         </p><!-- page TXT end -->
                                                     </div><!-- post txt end -->
                                                     <!-- divider start -->
