--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                                     <div class="inner-divider"></div><!-- divider end -->
                                                     <!-- page TXT start -->
                                                     <p>
-                                                        Unlock your online potential with my monthly website plan that showcases your brand and drives results <a class="link-underline" href="https://dz49.co/ecommerce-sites/18-e-commerce-website-hosted-by-dz49.html">CLICK HERE TO START NOW</a>
+                                                        Unlock your online potential with my monthly website plan that showcases your brand and drives results <a class="link-underline" href="https://dz49.co/build-a-website/18-monthly-plan.html">CLICK HERE TO START NOW</a>
                                                     </p><!-- page TXT end -->
                                                 </div>
                                                 <div class="clearfix"></div>
@@ -147,7 +147,7 @@
                                                     <div class="inner-divider"></div><!-- divider end -->
                                                     <!-- page TXT start -->
                                                     <p>
-                                                        Take advantage of the 5 year plan savings <a class="link-underline" href="https://dz49.co/ecommerce-sites/18-e-commerce-website-hosted-by-dz49.html">CLICK HERE TO START NOW</a>
+                                                        Take advantage of the 5 year plan savings <a class="link-underline" href="https://dz49.co/build-a-website/22-5-year-plan.html">CLICK HERE TO START NOW</a>
                                                     </p><!-- page TXT end -->
                                                 </div>
                                                 <div class="clearfix"></div>
@@ -172,7 +172,7 @@
                                                     <div class="inner-divider"></div><!-- divider end -->
                                                     <!-- page TXT start -->
                                                     <p>
-                                                        Designed for long term businesses such as restaurants <a class="link-underline" href="https://dz49.co/ecommerce-sites/18-e-commerce-website-hosted-by-dz49.html">CLICK HERE TO START NOW</a>
+                                                        Designed for long term businesses such as restaurants <a class="link-underline" href="https://dz49.co/build-a-website/23-10-year-plan.html">CLICK HERE TO START NOW</a>
                                                     </p><!-- page TXT end -->
                                                 </div>
                                                 <div class="clearfix"></div>
@@ -197,7 +197,7 @@
                                                     <div class="inner-divider"></div><!-- divider end -->
                                                     <!-- page TXT start -->
                                                     <p>
-                                                        Specializing in crafting tailor-made e-commerce websites, perfectly customized to meet your unique business requirements. <a class="link-underline" href="https://dz49.co/ecommerce-sites/18-e-commerce-website-hosted-by-dz49.html">CLICK HERE TO START NOW</a>
+                                                        Specializing in crafting tailor-made e-commerce websites, perfectly customized to meet your unique business requirements. <a class="link-underline" href="https://dz49.co/3-build-a-website">CLICK HERE TO START NOW</a>
                                                     </p><!-- page TXT end -->
                                                 </div>
                                                 <div class="clearfix"></div>
