--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                                                     <div class="inner-divider"></div><!-- divider end -->
                                                     <!-- page TXT start -->
                                                     <p>
-                                                        Take advantage of the 5 year plan savings, great for developed businesses, restraunts, bars, hotels, brands & more <a class="link-underline" href="https://dz49.co/build-a-website/22-5-year-plan.html">CLICK HERE TO START NOW</a>
+                                                        Take advantage of the 5 year web plan savings, great for developed businesses, restraunts, bars, hotels, brands & more <a class="link-underline" href="https://dz49.co/build-a-website/22-5-year-plan.html">CLICK HERE TO START NOW</a>
                                                     </p><!-- page TXT end -->
                                                 </div>
                                                 <div class="clearfix"></div>
@@ -172,7 +172,7 @@
                                                     <div class="inner-divider"></div><!-- divider end -->
                                                     <!-- page TXT start -->
                                                     <p>
-                                                        Designed for long term developed businesses seeking a powerful, stable online presents <a class="link-underline" href="https://dz49.co/build-a-website/23-10-year-plan.html">CLICK HERE TO START NOW</a>
+                                                        Drive results with my long term 10 year plan designed for developed businesses seeking a powerful, stable online presents <a class="link-underline" href="https://dz49.co/build-a-website/23-10-year-plan.html">CLICK HERE TO START NOW</a>
                                                     </p><!-- page TXT end -->
                                                 </div>
                                                 <div class="clearfix"></div>
