--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                                     <div class="inner-divider"></div><!-- divider end -->
                                                     <!-- page TXT start -->
                                                     <p>
-                                                        Test the waters, unlock your online potential with DZ49's web plans, great for influencers, portfolios, digital resumes, E-commerce online software & more. <a class="link-underline" href="https://dz49.co/build-a-website/18-monthly-plan.html">CLICK HERE TO START NOW</a>
+                                                        Test the waters, unlock your online potential with DZ49's web plans, great for influencers, portfolios, digital resumes, E-commerce online software & more. <a class="link-underline" href="https://dz49.co/3-build-a-website">CLICK HERE TO START NOW</a>
                                                     </p><!-- page TXT end -->
                                                 </div>
                                                 <div class="clearfix"></div>
