--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                                                     <div class="inner-divider"></div><!-- divider end -->
                                                     <!-- page TXT start -->
                                                     <p>
-                                                        A pioneering website, soon to be widely recognized, boasting numerous innovations that seamlessly integrate with real-life living spaces and empower crowdfunding for assets. Prepare to revolutionize the way you experience your living environment and invest in the future.. <a class="link-underline" href="https://dz49.co/build-a-website/22-5-year-plan.html">WEBSITE COMING SOON!</a>
+                                                        A pioneering website, soon to be widely recognized, boasting numerous innovations that seamlessly integrate with real-life living spaces and empower crowdfunding for assets. Prepare to revolutionize the way you experience your living environment and invest in the future.. <a class="link-underline" href="https://quarterspaces.com/">WEBSITE COMING SOON!</a>
                                                     </p><!-- page TXT end -->
                                                 </div>
                                                 <div class="clearfix"></div>
