--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <!-- menu start -->
                         <ul class="nav navbar-nav navbar-right">
                             <li>
-                                <a class="link-underline-menu active" href="#home">Home</a>
+                                <a class="link-underline-menu active" href="#home">DZ49'S PORTFOLIO OF PROJECTS</a>
                             </li>
                         </ul><!-- menu end -->
                     </div>
